--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.15.1",
     "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -10,10 +11,12 @@
     "@types/googlemaps": "^3.0.0",
     "@types/markerclustererplus": "^2.1.29",
     "@types/react": "^15.0.0 || ^16.0.0",
+    "date-fns": "^2.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "4.0.3",
+    "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
